// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Render a single author 1`] = `
<View>
  <Text
    accessibilityRole="link"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
        "textDecorationLine": "underline",
      }
    }
  >
    Alexandra Frean
  </Text>
</View>
`;

exports[`2. Render a given section colour 1`] = `
<View>
  <Text
    accessibilityRole="link"
    style={
      Object {
        "color": "blue",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
        "textDecorationLine": "underline",
      }
    }
  >
    Alexandra Frean
  </Text>
</View>
`;

exports[`3. Render an author with given styles 1`] = `
<View>
  <Text
    accessibilityRole="link"
    style={
      Object {
        "color": "red",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
        "textDecorationLine": "underline",
      }
    }
  >
    Alexandra Frean
  </Text>
</View>
`;
